--- a/data/pan-task-eval-out/leaderboard.tex
+++ b/data/pan-task-eval-out/leaderboard.tex
@@ -13,7 +13,7 @@
 8 & 8 & Baseline TF-IDF SVM & baseline-tf-idf & 0.963 & 0.900 & 0.897 & 0.904 & 0.946 & 0.922 & 0.106 & 0.093 \\
 9 & 9 & bohan-li & distinct-dachshund & 0.951 & 0.888 & 0.884 & 0.919 & 0.952 & 0.922 & 0.052 & 0.115 \\
 10 & 10 & Marchitan & tangy-arch & 0.945 & 0.890 & 0.869 & 0.905 & 0.952 & 0.916 & 0.011 & 0.142 \\
-11 & 11 & Sai Teja & tomato-conduction & 0.897 & 0.881 & 0.881 & 0.916 & 0.958 & 0.914 & 0.005 & 0.129 \\
+11 & 11 & Teja & tomato-conduction & 0.897 & 0.881 & 0.881 & 0.916 & 0.958 & 0.914 & 0.005 & 0.129 \\
 12 & 12 & xlbniu & poky-corgie & 0.883 & 0.875 & 0.875 & 0.910 & 0.950 & 0.907 & 0.032 & 0.132 \\
 13 & 13 & Jimeno-Gonzalez & sluggish-romano & 0.941 & 0.873 & 0.849 & 0.892 & 0.943 & 0.901 & 0.029 & 0.162 \\
 14 & 14 & Völpel & crabby-announcer & 0.922 & 0.881 & 0.849 & 0.892 & 0.936 & 0.899 & 0.084 & 0.151 \\
